# PluginCore

./: README.md
core/: CMakeLists.txt  makefile  test.cpp
core/include/: Plugin.h  PluginCoreAPI.h  PluginCoreCommDefine.h  Server.h  plugin.jsn
core/src/comm/DynamicArray/: DynamicArray.hpp
core/src/comm/Log/: Log.cpp  Log.h
core/src/comm/MsgQueue/: MsgQueue.cpp  MsgQueue.h  MsgQueueBasic.cpp  MsgQueueBasic.h
core/src/comm/MsgQueue/shm/: AddrMap.hpp  MsgQueueShm.cpp  MsgQueueShm.h  ShmPool.cpp  ShmPool.h  shmPool.cpp  shmPool.h  shmPoolCommDef.cpp  shmPoolCommDef.h  shmPoolList.cpp  shmPoolList.h
core/src/comm/NodeList/: NodeList.cpp  NodeList.h
core/src/comm/TaskPool/: Task.cpp  Task.h  TaskPool.cpp  TaskPool.h  Thread.cpp  Thread.h
core/src/comm/Time/: Time.cpp  Time.h
core/src/include/: CommDefine.h
